# forecastGPT

./: AGENTS.md  CHANGES.md  CLAUDE.md  COMPLETE_SUMMARY.md  DATABASE_ARCHITECTURE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  FIXES_APPLIED.md  FORECASTER_PLAN.md  FORECAST_TIMELINE_IMPLEMENTATION.md  FRONTEND_DYNAMIC_UPDATES_FIX.md  LOCAL_DEVELOPMENT.md  OPTIMIZATIONS.md  PLAN_MAESTRO.md  QUICKSTART.md  ROADMAP.md  RUN_DEV_FIXES.md  RUN_DEV_IMPROVEMENTS.md  SERVICES.md  SETUP_GITHUB_SECRETS.md  TEST_RUN_DEV.md  WEAVIATE_MIGRATION.md  com.bloomberggpt.backend.plist  com.bloomberggpt.database.plist  docker-compose.yml  nfl-v2-baker-predictive.json  nixpacks.toml  railway-db-setup.sh  railway.toml  requirements.txt  run-dev.sh  setup-services.sh  start.sh
backend/: .env.example  BACKTEST_RESULTS.md  EVENT_FEATURES_ANALYSIS.md  FORECAST_SNAPSHOTS.md  ML_FORECASTER_DEPLOYMENT.md  NFL_DATA_SETUP.md  __init__.py  add_meta_column.py  app.py  config.py  db.py  embeddings.py  forcast_explorer.py  migrate_forecast_snapshots.py  migrate_nfl_tables.py  migrate_projections_table.py  migrate_to_weaviate.py  pyproject.toml  pyrightconfig.json  start.sh  test_forecast_snapshots.py  test_nfl_ml_api.sh  vector_store.py
backend/cli/: forecast_cli.py
backend/ingest/: backfill_crypto_returns.py  backfill_equity_returns.py  backfill_forecasts.py  backfill_game_features.py  backfill_github_nfl.py  backfill_kaggle_nfl.py  backfill_nfl_elo.py  backfill_nfl_outcomes.py  backfill_sportsdata_nfl.py  baker_projections.py  nfl_news_api.py  rss_ingest.py  sportsdata_events.py  status.py  team_stats_ingest.py
backend/llm/: __init__.py  providers.py
backend/ml/: README.md  __init__.py  backtest.py  backtest_ml_model.py  evaluate_model_performance.py
backend/models/: confidence_utils.py  event_return_forecaster.py  ml_forecaster.py  naive_asset_forecaster.py  nfl_event_forecaster.py  nfl_ml_forecaster.py  regime_classifier.py
backend/notebooks/: Event_Similarity_and_Forecast_Explorer.ipynb  asset_forecaster_training.py  nfl_forecaster_training.py  train_ml_forecaster.py
backend/numeric/: asset_projections.py  asset_returns.py
backend/signals/: context_window.py  crypto_features.py  feature_extractor.py  game_feature_builder.py  nfl_features.py  (+2 more)
(+83 files in other folders)
